# Janta_Power

./: .gitignore  BUILD_FIX_INSTRUCTIONS.md  COMPLETE_SETUP_GUIDE.md  Cargo.toml  README.md  build.rs  config.toml.example  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
accel-stepper/: .cargo_vcs_info.json  Cargo.toml
accel-stepper/src/: driver.rs  hal_devices.rs
bno080/: .cargo_vcs_info.json  Cargo.toml
bno080/src/: lib.rs  wrapper.rs
bno080/src/interface/: i2c.rs  mod.rs
buttons/: Cargo.toml
buttons/src/: lib.rs
clock/: Cargo.toml
clock/src/: lib.rs
ds323x/: .cargo_vcs_info.json  Cargo.toml
ds323x/src/: ds3231.rs  lib.rs
ds323x/src/ds323x/: alarms.rs  configuration.rs  datetime.rs  mod.rs  status.rs
hdc1080/: .cargo_vcs_info.json  Cargo.toml
hdc1080/src/: lib.rs
motion/: Cargo.toml
motion/src/: lib.rs  motion.rs  states.rs
network/: Cargo.toml  fullchain.pem  publisher.py
network/src/: mqtt.rs
ota/: Cargo.toml
ota/src/: lib.rs
rgb_led/: Cargo.toml
rgb_led/src/: lib.rs
sensors/: Cargo.toml
sensors/src/: lib.rs
src/: config.rs  main.rs
wifi/: Cargo.toml
wifi/src/: lib.rs
