[package]
name = "ota"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-svc = "0.51"
embedded-svc = "0.28.1"
hex = "0.4.3"
network = { path = "../network" }
log = "0.4"
anyhow = "1.0" # New Dependency
heapless = "0.8.0"
sha2 = "0.10.9"
semver = "1.0.26"
base64 = "0.22.1"
serde_json = "1.0.143"
